[Offline Pages] Adding metadatas for namespace async_loading.

Added namespace, histogram suffix and client policy for async_loading.
Also fixed a crash when adding suffixes for expiring histograms.

BUG=623736

Review-Url: https://codereview.chromium.org/2111653002
Cr-Commit-Position: refs/heads/master@{#405401}

Former-commit-id: 14c0911f78eaf6c704b65ed46b300ed52f0f1626